--- a/src/styles.less
+++ b/src/styles.less
@@ -18,6 +18,12 @@ body {
   --colour-yellow: rgb(250, 248, 54);
   --colour-green: rgb(80, 230, 80);
 
+  --colour-white-faded: rgba(255, 255, 255, 0.2);
+  --colour-red-faded: rgba(246, 52, 52, 0.2);
+  --colour-blue-faded: rgba(80, 180, 250, 0.2);
+  --colour-yellow-faded: rgba(250, 248, 54, 0.2);
+  --colour-green-faded: rgba(80, 230, 80, 0.2);
+
   --main-tile-width: 20vw;
 
   --middle-tiles-flex-direction: column;
